<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Todo List</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_todo_List">Add a new Task</string>
    <string name="task_title_text">Task Title:</string>
    <string name="description">Description:</string>
    <string name="addition_description">Additional:</string>
    <string name="month">Due Date:</string>
    <string name="type">Type:</string>
    <string name="urgent">Urgent</string>
    <string name="normal">Normal</string>
    <string name="scary">Scary</string>
    <string name="save">Add</string>
    <string name="hint_name">Task title</string>
    <string name="hint_description">Short description</string>
    <string name="hint_addition_description">Additional description</string>
    <string name="detail_due_label">Due: </string>

    <string name="alert_title">Task title or date Missing</string>
    <string name="alert_message">Please enter Task title and choose due date!</string>



    <string-array name="month_array">
        <item></item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>


    <string-array name="date_array">
        <item></item>
        <item> 1st</item>
        <item> 2nd</item>
        <item> 3rd</item>
        <item> 4th</item>
        <item> 5th</item>
        <item> 6th</item>
        <item> 7th</item>
        <item> 8th</item>
        <item> 9th</item>
        <item> 10th</item>
        <item> 11th</item>
        <item> 12th</item>
        <item> 13th</item>
        <item> 14th</item>
        <item> 15th</item>
        <item> 16th</item>
        <item> 17th</item>
        <item> 18th</item>
        <item> 19th</item>
        <item> 20th</item>
        <item> 21th</item>
        <item> 22th</item>
        <item> 23th</item>
        <item> 24th</item>
        <item> 25th</item>
        <item> 26th</item>
        <item> 27th</item>
        <item> 28th</item>
        <item> 29th</item>
        <item> 30th</item>
        <item> 31th</item>


    </string-array>


    <string-array name="year_array">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string name="title_activity_todo_detail">TodoDetailActivity</string>


</resources>
