<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="1dp"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TodoListActivityFragment">

    <TableLayout
        android:id="@+id/fragment_inputControls"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/fragment_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/task_title_text"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fragment_title_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:hint="@string/hint_name"
                android:layout_marginEnd="70dp"
                android:textSize="14sp">

                <requestFocus />
            </EditText>

        </TableRow>


        <TableRow
            android:id="@+id/tableRow1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/fragment_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/description"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fragment_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_description"
                android:textSize="14sp">

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/fragment_addition_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/addition_description"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fragment_addition_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_addition_description"
                android:textSize="14sp">

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_due_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month" />

            <Spinner
                android:id="@+id/fragment_month_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:entries="@array/month_array"
                tools:listitem="@android:layout/simple_spinner_dropdown_item" />

            <Spinner
                android:id="@+id/fragment_date_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:entries="@array/date_array"
                tools:listitem="@android:layout/simple_spinner_dropdown_item" />


        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fragment_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0"
                android:text="@string/type" />

            <RadioGroup
                android:id="@+id/fragment_type_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fragment_type_urgent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:checked="true"
                    android:text="@string/urgent"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/fragment_type_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/normal"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/fragment_type_scary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/scary"
                    android:textSize="12sp" />

            </RadioGroup>

        </TableRow>

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/save" />

    </TableLayout>


    <ListView
        android:id="@+id/list_view_todo"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/fragment_inputControls"
        android:layout_centerHorizontal="true" />

</RelativeLayout>